# ClashTUI

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/clashtui-bin/: Cargo.toml  build.rs
crates/clashtui-bin/src/: cli.rs  embedded_core.rs  main.rs
crates/clashtui-core-api/: Cargo.toml
crates/clashtui-core-api/src/: client.rs  error.rs  lib.rs  models.rs  stream.rs
crates/clashtui-core-api/tests/: mock_server.rs
crates/clashtui-domain/: Cargo.toml
crates/clashtui-domain/src/: config.rs  error.rs  lib.rs  lifecycle.rs  mixin.rs  paths.rs  schedule.rs  upgrade.rs  util.rs  yaml.rs
crates/clashtui-domain/src/profile/: download.rs  mod.rs
crates/clashtui-domain/src/sysproxy/: linux.rs  macos.rs  mod.rs
crates/clashtui-tui/: Cargo.toml
crates/clashtui-tui/src/: app.rs  component.rs  context.rs  effect_runner.rs  event.rs  lib.rs  router.rs  theme.rs  tui.rs
crates/clashtui-tui/src/tabs/: connections.rs  logs.rs  mod.rs  profiles.rs  proxies.rs  settings.rs  status.rs  traffic.rs
crates/clashtui-tui/src/widgets/: mod.rs  prompt.rs  selectable_list.rs
docs/: DEVELOPMENT.md
