[workspace]
resolver = "2"
members = [
    "crates/clashtui-core-api",
    "crates/clashtui-domain",
    "crates/clashtui-tui",
    "crates/clashtui-bin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/vonequinox/ClashTUI"

[workspace.dependencies]
# 内部 crate
clashtui-core-api = { path = "crates/clashtui-core-api" }
clashtui-domain = { path = "crates/clashtui-domain" }
clashtui-tui = { path = "crates/clashtui-tui" }

# 异步运行时
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "process",
    "signal",
    "io-util",
] }
futures-util = "0.3"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste"] }
ratatui-macros = "0.7"
# 注意：tui-textarea 0.7 仍依赖 ratatui 0.29 / crossterm 0.28，与本项目的 0.30/0.29
# 不兼容。M2 需要输入框时再评估（等其升级或自写极简输入框）。暂不引入。

# 网络 / WS
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
    "rustls-native-certs",
    "stream",
    "http2",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "connect",
    "rustls-tls-webpki-roots",
] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
noyalib = "0.0.7"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }

# 错误处理
color-eyre = "0.6"
thiserror = "2"

# CLI / 工具
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
flate2 = "1"
tempfile = "3"
semver = "1"
urlencoding = "2"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
strip = true
